# python-samples

./: .gitignore
shop-alchemy/: README.md  pyproject.toml  shop.db  test.db
shop-alchemy/docs/: database_spec.md  development_plan.md  prd.md  technical_debt.md
shop-alchemy/openapi/: openapi.yaml
shop-alchemy/src/application/: schemas.py  services.py
shop-alchemy/src/domain/: models.py
shop-alchemy/src/infrastructure/: database.py
shop-alchemy/src/presentation/: main.py
shop-alchemy/tests/: test_main.py
