[tool.poetry]
name = "shop-alchemy"
version = "0.1.0"
description = ""
authors = ["sungchul.shin <sungchul.shin@intelliantech.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.13"
sqlalchemy = "^2.0.42"
pydantic = "^2.11.7"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
email-validator = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
